# jasmine_toolkit

./: .codeclimate.yml  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/actions/unittest/: action.yml
.github/actions/validation/: action.yml
.github/workflows/: build.yml  unittest.yml  validation.yml
jasmine_toolkit/: __init__.py  version.py
jasmine_toolkit/datamodel/: astrometric_catalogue.py  efficiency.py
jasmine_toolkit/operation/: fov_change_mode.py  pointing_freedom.py  pointing_mode.py  pointing_plan.py  pointing_plan_factory.py
jasmine_toolkit/operation/test/: test_pointing_plan.py  test_pointing_plan_factory.py
jasmine_toolkit/parameters/: __init__.py  detector.py  exception.py  parameter.py  telescope.py
jasmine_toolkit/parameters/test/: test_detector.py  test_parameter.py
jasmine_toolkit/satellite/: satellite.py
jasmine_toolkit/satellite/attitude/: __init__.py  attitude.py
jasmine_toolkit/satellite/attitude/attitude/: attitude.py
jasmine_toolkit/satellite/attitude/test/: test_attitude.py
jasmine_toolkit/satellite/orbit/: orbit.py
jasmine_toolkit/satellite/orbit/test/: test_orbit.py
jasmine_toolkit/satellite/test/: test_satellite.py
jasmine_toolkit/utils/: __init__.py  mapping.py  parameter_table.py  parameters.py  parameters2.py
jasmine_toolkit/utils/constants/: constants.yaml  jasmine_constant.py
jasmine_toolkit/utils/test/: constants_not_exists.yaml  constants_update.yaml  test_mapping.py  test_mission.py  test_parameters.py  test_parameters2.py
notebook/: README.md  jasmine_toolkit
sandbox/: README.md  jasmine_toolkit  using_parameters.py
scripts/: README.md
uml/: jasmine_position.md  mapping_component.md
