[build-system]
requires = ['setuptools>=75.0', 'wheel>=0.44']
build-backend = 'setuptools.build_meta'


[project]
name = 'jasmine_toolkit'
description = 'A tool suite for the development of JASMINE'
keywords = ['astronomy', 'JASMINE']
license = { file = 'LICENSE' }

authors = [
  { name = 'Ryou Ohsawa', email = 'ryou.ohsawa@nao.ac.jp' }
]

classifiers = [
  'Development Status :: 3 - Alpha',
  'Intended Audience :: Science/Research',
  'License :: OSI Approved :: MIT License',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Scientific/Engineering :: Astronomy'
]

dynamic = ['version', 'readme']


dependencies = [
  'numpy>=2.0',
  'astropy>=6.0'
]

[project.optional-dependencies]
test = [
  'pytest>=8.3',
  'pytest-cov>=5.0'
]

[project.urls]
homepage = 'https://github.com/JASMINE-Mission/jasmine_toolkit'
repository = 'https://github.com/JASMINE-Mission/jasmine_toolkit'

[tool.setuptools.packages.find]
include = ['jasmine_toolkit*']

[tool.setuptools.dynamic]
version = { attr = 'jasmine_toolkit.version.version' }
readme = { file = 'README.md', content-type = 'text/markdown' }
