[metadata]
name = jasmine_toolkit
description = A tool suite for the development of JASMINE
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: jasmine_toolkit.version.version
license_files = LICENSE

author = Ryou Ohsawa
author_email = ryou.ohsawa@nao.ac.jp

classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
  Operating System :: POSIX :: Linux
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Scientific/Engineering :: Astronomy

project_urls =
  homepage = https://github.com/JASMINE-Mission/jasmine_toolkit
  repository = https://github.com/JASMINE-Mission/jasmine_toolkit

[options]
zip_safe = False
python_requries = >=3.9
packages = find:
install_requires =
  numpy>=2.0
  astropy>=6.0

[options.extras_require]
test =
  pytest>=8.3
  pytest-cov>=5.0

[options.packages.find]
include =
  jasmine_toolkit*
exclude =
  validation*
  scripts*
  notebook*
  sandbox*
  docs*
